<resources>
    <string name="app_name" translatable="false">Sociale voeding</string>
    <string name="hello_user_category">hey User, \n what are you looking for?</string>
    <string name="eat_in_city">Eat in %s</string>
    <string name="food">Food</string>
    <string name="more_info">More info</string>
    <string name="open_until_hour">Open until %s</string>
    <string name="distance">Distance to place</string>
    <string name="opening_hours_today">Opening hours today</string>
    <string name="back">Go back</string>
    <string name="start">Go to start</string>
    <string name="explanation">Help me</string>
    <string name="read">Read aloud</string>
    <string name="isOpen">Is open</string>
    <string name="isGesloten">Is closed</string>
    <string name="address">Address</string>
    <string name="stop">Stop</string>
</resources>
