<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pastel_red"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_toolbar_back"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/back"
        android:textColor="@color/colorText"
        app:backgroundTint="@color/primaryColor"
        app:icon="@drawable/ic_arrow_back_black_24dp"
        app:iconTint="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:background="@color/colorText"
        app:layout_constraintBottom_toBottomOf="@+id/btn_toolbar_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_toolbar_home"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/ic_home_black_24dp"
        android:drawableRight="@drawable/ic_home_black_24dp"
        android:gravity="right"
        android:text="@string/start"
        android:textColor="@color/colorText"
        app:backgroundTint="@color/primaryColor"
        app:iconPadding="8dp"
        app:iconTint="@color/colorText"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/explanation"
        android:visibility="gone"
        app:backgroundTint="@color/primaryColor"
        app:icon="@drawable/ic_help_black_24dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_black_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>