<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="clicklistener"
            type="com.socialevoeding.bap.ui.places.PlacesClickListener" />
        <variable
            name="place"
            type="com.socialevoeding.domain.model.Place" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/place_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{() -> clicklistener.onPlaceClick(place)}">

            <TextView
                android:id="@+id/txt_places_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="De Sociale Kruidenier"
                android:textAllCaps="false"
                android:clickable="false"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                app:fontFamily="@font/noto_sans_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_place" />

            <ImageView
                android:id="@+id/img_places_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/distance"
                android:src="@drawable/ic_directions_walk_black_24dp"
                android:tint="@color/colorText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_places_name" />

            <TextView
                android:id="@+id/txt_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="20km"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:fontFamily="@font/noto_sans"
                app:layout_constraintBottom_toBottomOf="@+id/img_places_distance"
                app:layout_constraintStart_toEndOf="@+id/img_places_distance" />

            <ImageView
                android:id="@+id/img_place"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/voedselbank" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_adres"
                android:src="@drawable/ic_more_info_24dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_places_distance"
                android:src="@drawable/ic_location_city_black_24dp" />

            <TextView
                android:id="@+id/txt_adres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="Adres"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:fontFamily="@font/noto_sans"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/imageView4" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_info"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:fontFamily="@font/noto_sans"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/opening_hours_today"
                android:text="@string/open_until_hour"
                android:textSize="18sp"
                android:visibility="gone"
                app:chipBackgroundColor="#00FF00"
                app:chipCornerRadius="10dp"
                app:chipIcon="@drawable/ic_clock_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>